--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
   <title>tSNE</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="assets/microscope.png">
+  <link href="assets/microscope.png" rel="stylesheet">
+  <link href="assets/microscope.png" rel="stylesheet">
 </head>
 <body>
   <style>
